--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
 
 
 .recursos{
@@ -9,13 +9,12 @@
     padding-bottom: 100px;
 }
 
-
-
-header h1{
-    color: white;
-    font-weight: bolder;
-    font-family: 'Poppins', sans-serif;
+html {
+    scroll-behavior: smooth;
+    font-family: 'Abel', sans-serif;
 }
+
+
 
 header h2{
     color: rgb(138, 138, 138);
@@ -30,12 +29,32 @@ header h2{
     background: rgb(0, 0, 0) ;
 }
 
-#nav-principal a{
+
+
+#nav-principal a {
     color: white;
     font-weight: bold;
     font-size: 17px;
     padding-left: 50px;
+    position: relative;
+    text-align: center;
 }
+
+#nav-principal a::after {
+    content: " ";
+    width: 0%;
+    height: 4px;
+    background-color: #e00000;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: 0.5s ease-in-out;
+}
+
+#nav-principal a:hover::after {
+    width: 100%;
+}
+
 
 
 #recursos{
@@ -49,16 +68,19 @@ header h2{
     color: rgb(255, 255, 255);
     padding-top: 20px;
     overflow-y: hidden;
+    margin-left: 50px;
+    font-family: 'Abel', sans-serif;
 }
 
 .card-titulo p{
     font-size: 30px;
-    font-weight: bold;
+    margin-left: 67px;
     overflow-y: hidden;
+    font-family: 'Abel', sans-serif;
 }
 
 .card-titulo span{
-    color: rgb(137, 133, 201);
+    color: rgb(133, 185, 201);
     font-size: 20px;
 }
 
@@ -66,11 +88,37 @@ header h2{
     width: 200px;
     background-image: linear-gradient(45deg,rgba(17, 0, 255, 0.486),#e0000069);
     margin-top: 5px;
+    transition-duration: 1s;
+}
+
+.btn-recursos:hover{
+    background-image: linear-gradient(45deg,rgb(17, 0, 255),#e00000);
+    transition-duration: 2s;
+
 }
 
 .box-img{
-    padding-left: 60px;
+    margin-left: 80px;
+    height: 200px;
+    width: 200px;
+    border-radius: 100px;
+    background-image: url(img/avatarpng.png);
+    background-size: cover;
+    transition: background-image 1s ease-in-out;
 }
+
+.box-img:hover{
+    background-image: url(img/avatar2.png);
+    transition: background-image 1s;
+    
+}
+
+.box-img:not(:hover) {
+    transition: background-image 1s ease-in-out;
+    background-image: url(img/avatarpng.png);
+  }
+
+
 
 .box-content h1{
     padding-top: 10px;
@@ -79,14 +127,6 @@ header h2{
 }
 
 
-.img-perfil{
-    width: 180px;
-    height: 180px;
-    border-radius: 90px;
-    padding-top: 10px;
-    background-size: contain;
-   background-image: linear-gradient(45deg,rgba(14, 3, 168, 0.945),#e00000);
-}
 
 .card-apresentation{
     padding-top: 20px;
@@ -94,9 +134,10 @@ header h2{
 
 .card-apresentation h2{
     border-top: solid 1px rgb(172, 51, 51);
-    font-size: 30px;
+    font-size: 35px;
     padding-top: 40px;
     padding-bottom:30px;
+    font-family: 'Abel', sans-serif;
 }
 
 .card-apresentation p{
@@ -104,24 +145,35 @@ header h2{
 }
 
 
+#projetos{
+    padding-top: 60px;
+}
+
+#projetos h1{
+    font-family: 'Abel', sans-serif;
+    font-weight: bold;
+    font-size: 44px;
+}
+
 .navbar-brand i{
     color: white;
     font-size: 20px;
 }
 
 
-
 .skills{
     overflow-y: hidden;
     padding-bottom: 50px;
-    
+    padding-top: 100px;
 }
 
 .skills h1{
-    font-size: 35px;
+    font-size: 44px;
+    font-weight: bold;
     padding-top: 40px;
     overflow-y: hidden;
     padding-bottom: 40px;
+    font-family: 'Abel', sans-serif;
 
 }
 
@@ -133,13 +185,39 @@ header h2{
     
 }
 
-.skills i:hover{
+.skills .fa-html5:hover{
     transition: 0.5s;
     cursor: pointer;
     transform: scale(1.2);
     overflow-y: hidden;
-    
+    color: rgb(255, 30, 0);
 }
+
+
+.skills .fa-css3:hover{
+    transition: 0.5s;
+    cursor: pointer;
+    transform: scale(1.2);
+    overflow-y: hidden;
+    color: rgb(0, 89, 255);
+}
+
+.skills .fa-square-js:hover{
+    transition: 0.5s;
+    cursor: pointer;
+    transform: scale(1.2);
+    overflow-y: hidden;
+    color: rgb(255, 230, 0);
+}
+
+.skills .fa-bootstrap:hover{
+    transition: 0.5s;
+    cursor: pointer;
+    transform: scale(1.2);
+    overflow-y: hidden;
+    color: rgb(119, 0, 255);
+}
+
 
 
 footer{
@@ -152,11 +230,6 @@ footer{
 footer p{
     color: white;
 }
-
-
-
-
-
 
 
 @media (max-width:575.98px){
@@ -173,16 +246,8 @@ footer p{
         padding-left: 60px;
     }
 
-    .card-titulo h1{
-        padding-left: 50px;
-    }
-
-    .card-titulo p,span{
-        padding-left: 70px;
-    }
-    
-    .box-img{
-        padding-left: 100px;
+    .card-titulo span{
+        padding-left: 40px;
     }
 }
 
@@ -203,18 +268,7 @@ footer p{
     .card-titulo{
         padding-left: 70px;
     }
-
-    .card-titulo h1{
-        padding-left: 50px;
-    }
-
-    .card-titulo p,span{
-        padding-left: 70px;
-    }
     
-    .box-img{
-        padding-left: 100px;
-    }
 }
 
 
@@ -224,8 +278,12 @@ footer p{
 @media (min-width: 768px) and (max-width:991.98px) { 
     
 
+    .card-titulo span{
+        margin-left: 30px;
+    }
     .btn-recursos{
         margin-bottom: 10px;
+        margin-left: 50px;
     }
 
    
