--- a/estilo.css
+++ b/estilo.css
@@ -236,6 +236,8 @@ header h2 {
 
 }
 
+
+
 .overlay {
     position: absolute;
     top: 0;
@@ -403,7 +405,7 @@ footer h2{
         left: 30%;
     }
     
-
+    
 
 
 }
@@ -413,7 +415,13 @@ footer h2{
 
 
 
-@media (min-width:992px) and (max-width: 1199.98px) {}
+@media (min-width:992px) and (max-width: 1199.98px) {
+    
+}
 
 
-@media (min-width:1200px) {}
+@media (min-width:1200px) {
+    .img-fluid{
+        height: 250px;
+    }
+}
