--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
-
+*{
+    overflow-x: hidden;
+}
 
 .recursos {
     padding-top: 100px;
@@ -98,7 +100,6 @@ header h2 {
 }
 
 .box-img {
-    margin-left: 80px;
     height: 200px;
     width: 200px;
     border-radius: 100px;
@@ -186,12 +187,21 @@ header h2 {
 }
 
 
+.container_skills{
+    overflow-y: hidden;
+}
 
 
-
+.skillcards{
+    overflow-y: hidden;
+}
 
 
 /* Area Projetos */
+
+.cards_projetos{
+    overflow-y: hidden;
+}
 
 .title-projetos{
     text-align: center;
@@ -228,13 +238,9 @@ header h2 {
     position: relative;
     display: inline-block;
     transition: 0.5s;
+    overflow-y: hidden;
 }
 
-
-.img-projeto {
-    width: 700px;
-
-}
 
 
 
@@ -247,6 +253,7 @@ header h2 {
     background-color: rgba(0, 0, 0, 0.5);
     opacity: 1;
     transition: opacity 0.5s ease;
+    
 }
 
 .image-container:hover .overlay {
@@ -263,21 +270,21 @@ header h2 {
 
 .legenda-imagem {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     position: absolute;
     bottom: -10px;
     left: 0;
     width: 100%;
+    height: 70px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     background-color: rgb(36, 35, 35);
     color: #fff;
     font-size: 14px;
-    padding: 1px;
     opacity: 0;
     transition: opacity 0.5s ease;
     z-index: -1;
-
+    
 }
 
 .link_projeto {
@@ -336,6 +343,7 @@ footer {
     background:#13131F;
     height: 700px;
     text-align: center;
+    overflow-y: hidden;
 }
 
 footer h2{
@@ -370,10 +378,37 @@ footer h2{
 
 
 @media (max-width:575.98px) {
+    .box-img{
+        margin: auto;
+        margin-left: 100px;
+    }
+
+    .card-titulo{
+        text-align: center;
+    }
     .container_skills{
         display: flex;
         flex-direction: row;
-        
+    }
+    .skillcards{
+        width: 120px;
+        height: 110px;
+    }
+    .cards img {
+        width: 50px;
+        height: 50px;
+    }
+    .skillcards{
+        display: flex;
+    }
+    .legenda-imagem{
+        height: 65px;
+    }
+    .link{
+        display: flex;
+    }
+    .link a{
+        margin-left: 10px;
     }
 }
 
@@ -381,14 +416,24 @@ footer h2{
 
 @media (min-width: 576px) and (max-width:767.98px) {
 
-   
+    .box-img{
+        margin: auto;
+        margin-left: 200px;
+    }
 
+    .card-titulo{
+        text-align: center;
+    }
     .legenda-projeto {
         position: relative;
         bottom: -20%;
         left: 20%;
     }
     
+    .legenda-imagem{
+        height: 50px;
+    }
+   
 
 }
 
@@ -397,15 +442,24 @@ footer h2{
 
 
 @media (min-width: 768px) and (max-width:991.98px) {
+    
+    .box-img{
+        margin: auto;
+        margin-left: 280px;
+    }
 
-
+    .card-titulo{
+        text-align: center;
+    }
     .legenda-projeto {
         position: relative;
         bottom: -30%;
         left: 30%;
     }
     
-    
+    .legenda-imagem{
+        height: 50px;
+    }
 
 
 }
@@ -416,6 +470,9 @@ footer h2{
 
 
 @media (min-width:992px) and (max-width: 1199.98px) {
+    .legenda-imagem{
+        height: 60px;
+    }
     
 }
 
@@ -423,5 +480,8 @@ footer h2{
 @media (min-width:1200px) {
     .img-fluid{
         height: 250px;
+    }
+    .legenda-imagem{
+        height: 65px;
     }
 }
